@@ -51,7 +51,6 @@ SET(cmtkBase_SRCS
   cmtkHistogram.cxx
   cmtkHypothesisTests.cxx
   cmtkImageOperation.cxx
-  cmtkImageOperationApplyMask.cxx
   cmtkImageOperationCropRegion.cxx
   cmtkImageOperationCropThreshold.cxx
   cmtkImageOperationDistanceMap.cxx
