@@ -1,6 +1,6 @@
 /*
 //
-//  Copyright 2009 SRI International
+//  Copyright 2009, 2010 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -46,7 +46,8 @@ class ImageOperationThreshold
 {
 public:
   /// Constructor.
-  ImageOperationThreshold( const double threshold, const bool above = false, const bool toPadding = false ) : m_Threshold( threshold ), m_Above( above ), m_ToPadding( toPadding ) {}
+  ImageOperationThreshold( const double threshold, const bool above = false, const bool toPadding = false, const bool binarize = false ) 
+    : m_Threshold( threshold ), m_Above( above ), m_ToPadding( toPadding ), m_Binarize( binarize ) {}
   
   /// Apply this operation to an image in place.
   virtual cmtk::UniformVolume::SmartPtr  Apply( cmtk::UniformVolume::SmartPtr& volume );
@@ -54,25 +55,31 @@ public:
   /// Create a new lower thresholding operation.
   static void NewBelow( const double threshold )
   {
-    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, false, false ) ) );
+    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, false, false, false ) ) );
   }
   
   /// Create a new upper thresholding operation.
   static void NewAbove( const double threshold )
   {
-    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, true, false ) ) );
+    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, true, false, false ) ) );
   }
   
   /// Create a new lower thresholding operation to padding.
   static void NewBelowToPadding( const double threshold )
   {
-    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, false, true ) ) );
+    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, false, true, false ) ) );
   }
   
   /// Create a new upper thresholding operation to padding.
   static void NewAboveToPadding( const double threshold )
   {
-    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, true, true ) ) );
+    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, true, true, false ) ) );
+  }
+  
+  /// Create a new binarization thresholding operation.
+  static void NewBinarize( const double threshold )
+  {
+    ImageOperation::m_ImageOperationList.push_back( SmartPtr( new ImageOperationThreshold( threshold, false, false, true ) ) );
   }
   
 private:
@@ -84,6 +91,9 @@ private:
 
   /// Flag for setting values beyond threshold to padding, rather than to threshold value.
   bool m_ToPadding;
+
+  /// Flag for binarization.
+  bool m_Binarize;
 };
 
 } // namespace cmtk
