@@ -53,7 +53,7 @@ SET(cmtkSystem_SRCS
 
 ADD_LIBRARY(cmtkSystem ${cmtkSystem_SRCS})
 
-TARGET_LINK_LIBRARIES(cmtkSystem mxml)
+TARGET_LINK_LIBRARIES(cmtkSystem cmtkZlib mxml)
 
 IF(CMTK_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(cmtkSystem PROPERTIES ${CMTK_LIBRARY_PROPERTIES})
