@@ -152,6 +152,7 @@ IF(NOT CMTK_USE_MPI)
   # ==========================================
   # Tests for "convertx" tool
   SET(testList ${testList} 
+    convertxBinarize
     convertxBoundaryMap
     convertxBoundaryMapMultiValue
     convertxCropThresholdWriteRegion
